gfx/layers/apz/src/AsyncPanZoomController.h
@@ -1613,7 +1613,9 @@ class AsyncPanZoomController {
 
   wr::RenderRoot GetRenderRoot() const { return mRenderRoot; }
 
-  bool IsPinchZooming() const { return mState == PINCHING; }
+  bool IsAsyncZooming() const {
+    return mState == PINCHING || mState == ANIMATING_ZOOM;
+  }
 
  private:
   // Extra offset to add to the async scroll position for testing
